--- a/_includes/menu_items.html
+++ b/_includes/menu_items.html
@@ -11,5 +11,6 @@
     </li>
     {% endfor %}
   </ul>
-  {% endif %} {% endfor %}
+  {% endif %} {% if item.title == "projects." and site.projects %} {% include
+  projects_section.html %} {% endif %} {% endfor %}
 </ul>
